@@ -152,7 +152,11 @@ GDate *
 sj_metadata_helper_scan_date (const char *date)
 {
   int matched, year=1, month=1, day=1;
-  matched = sscanf(date, "%u-%u-%u", &year, &month, &day);
+
+  if (date == NULL)
+    return NULL;
+
+  matched = sscanf (date, "%u-%u-%u", &year, &month, &day);
   if (matched >= 1) {
     return g_date_new_dmy ((day == 0) ? 1 : day, (month == 0) ? 1 : month, year);
   }
