@@ -1,3 +1,8 @@
+2009-04-06  Ross Burton  <ross@linux.intel.com>
+
+	* libjuicer/sj-metadata.c:
+	Check that the date isn't NULL when parsing (#578060).
+
 2009-03-17  Ross Burton  <ross@linux.intel.com>
 
 	* configure.in:
